--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,23 @@
     <title>Devon Ulrich</title>
   </head>
   <body>
-    <div style="height: 1200px"></div>
-    <div data-aos="fade-left">
-      HI!
-    </div>
-    <div style="height: 1200px" />
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <a class="navbar-brand" href="#">Devon Ulrich</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="navbar-item">
+            <a class="nav-link" href="#">Intro</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Education</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
