--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,10 @@
     <title>Devon Ulrich</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="#">Devon Ulrich</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="navbar-item">
-            <a class="nav-link" href="#">Intro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Education</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="vh-100 bg-dark d-flex flex-column align-items-center justify-content-center">
+      <h1 class="text-light display-1">Devon Ulrich</h1>
+      <hr />
+      <h1 class="text-light">CS Student & Software Engineer</h1>
+    </div>
   </body>
 </html>
