Added background image to fullscreen header

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,11 @@
     <title>Devon Ulrich</title>
   </head>
   <body>
-    <div class="vh-100 bg-dark d-flex flex-column align-items-center justify-content-center">
-      <h1 class="text-light display-1">Devon Ulrich</h1>
-      <hr />
-      <h1 class="text-light">CS Student & Software Engineer</h1>
+    <div id="headContainer" class="vh-100 bg-dark d-flex flex-column align-items-center
+      justify-content-center">
+      <h1 class="text-light display-1" data-aos="fade-in">Devon Ulrich</h1>
+      <hr data-aos="fade-in" />
+      <h1 class="text-light" data-aos="fade-in">CS Student & Software Engineer</h1>
     </div>
   </body>
 </html>
