Replaced Image with a gradient

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,22 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Devon Ulrich</title>
   </head>
   <body>
-    <div id="headContainer" class="vh-100 bg-dark d-flex flex-column align-items-center
-      justify-content-center">
-      <h1 class="text-light display-1" data-aos="fade-in">Devon Ulrich</h1>
+    <div id="headContainer" class="vh-100 d-flex flex-column align-items-center
+      justify-content-center text-center">
+      <h1 class="text-white display-1" data-aos="fade-in">Devon Ulrich</h1>
       <hr data-aos="fade-in" />
-      <h1 class="text-light" data-aos="fade-in">CS Student & Software Engineer</h1>
+      <h1 class="text-white" data-aos="fade-in">CS Student & Software Engineer</h1>
+    </div>
+
+    <nav class="navbar sticky-top navbar-light bg-light" data-aos="fade-in">
+      <a class="navbar-brand" href="#">About</a>
+    </nav>
+    <div class="vh-100">
     </div>
   </body>
 </html>
