Made site a little more responsive & added an intro

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,50 @@
   <body>
     <div id="headContainer" class="vh-100 d-flex flex-column align-items-center
       justify-content-center text-center">
-      <h1 class="text-white display-1" data-aos="fade-in">Devon Ulrich</h1>
-      <hr data-aos="fade-in" />
-      <h1 class="text-white" data-aos="fade-in">CS Student & Software Engineer</h1>
+      <h1 class="tw display-1 d-none d-md-inline">Devon Ulrich</h1>
+      <h1 class="tw display-4 d-md-none">Devon Ulrich</h1>
+      <hr data-aos="zoom-in" data-aos-duration="1000" />
+      <h1 class="tw d-none d-md-inline">
+        CS Student & Software Engineer
+      </h1>
+      <h3 class="tw d-md-none">
+        CS Student & Software Engineer
+      </h3>
     </div>
 
-    <nav class="navbar sticky-top navbar-light bg-light" data-aos="fade-in">
-      <a class="navbar-brand" href="#">About</a>
+    <nav class="navbar navbar-expand sticky-top navbar-light border-bottom
+      justify-content-center bg-white">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Activities</a>
+        </li>
+      </ul>
     </nav>
-    <div class="vh-100">
+
+    <div class="vh-100 container mt-5">
+      <div class="row">
+        <div class="col-md">
+          <h1 class="text-center mb-3" data-aos="fade-up">Hello!</h1>
+          <p class="text-justify mt-3" data-aos="fade-up">I'm Devon Ulrich, a current
+             sophomore at Princeton. I'm majoring in CS, and am planning on minoring
+             in Statistics &amp; Machine Learning and Quantitative &amp; Computational
+             Biology. I love to program and learn all about computer science, and I've
+             done a bunch of cool projects that you can check out down below.
+          </p>
+        </div>
+        <div class="col-md">
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
