Added Education Section

--- a/src/index.html
+++ b/src/index.html
@@ -39,16 +39,16 @@
 
     <div class="container my-5">
       <div class="row">
-        <div class="col-md order-2">
-          <h1 class="mb-3" data-aos="fade-up">Hello!</h1>
-          <p class="text-justify mt-3" data-aos="fade-up">I'm Devon Ulrich, a current
+        <div class="col-md order-2" data-aos="fade-up">
+          <h1 class="mb-3">Hello!</h1>
+          <p class="text-justify mt-3">I'm Devon Ulrich, a current
             sophomore at Princeton. I'm majoring in CS, and am planning on minoring
             in Statistics &amp; Machine Learning and Quantitative &amp; Computational
             Biology. I love to program and learn all about computer science, and I've
             done a bunch of cool projects that you can check out down below.
           </p>
-          <h4 data-aos="fade-up">Here are some of my skills</h4>
-          <ul data-aos="fade-up">
+          <h4>Here are some of my skills</h4>
+          <ul>
             <li><u>Programming Languages</u>: Java, C/C++, MATLAB, Python, Javascript,
               OCaml</li>
             <li><u>Web Tools &amp; Frameworks</u>: HTML/CSS, React, Bootstrap, Webpack</li>
@@ -63,13 +63,14 @@
             <img src=<%=require('./images/me.jpg').default%> 
               class="rounded-circle img-thumbnail mx-auto" />
             <div class="mt-3 d-none d-md-block text-center">
-              <a href="https://www.linkedin.com/in/devon-ulrich-a57b2b1b4/">
+              <a href="https://www.linkedin.com/in/devon-ulrich-a57b2b1b4/"
+                class="noul mr-1">
                 <img src=<%=require('./images/linkedin-brands.svg').default%> 
-                  class="icon mr-1" />
+                  class="icon" />
               </a>
-              <a href="https://github.com/devonulrich">
+              <a href="https://github.com/devonulrich" class="noul ml-1">
                 <img src=<%=require('./images/github-square-brands.svg').default%>
-                  class="icon ml-1" />
+                  class="icon" />
               </a>
             </div>
           </div>
@@ -85,7 +86,57 @@
       </div>
     </div>
 
-    <div class="bg-light vh-100">
+    <div class="bg-light">
+      <div class="container py-5">
+        <h1 class="mb-3">Education</h1>
+        <div class="row border-bottom">
+          <div class="col-sm">
+            <h3 data-aos="fade-right">
+              Princeton University
+            </h3>
+          </div>
+          <div class="col-sm-4">
+            <h3 class="text-right d-none d-sm-block" data-aos="fade-left">May 2023</h3>
+            <h4 class="d-block d-sm-none" data-aos="fade-right">May 2023</h3>
+          </div>
+        </div>
+        <div class="row mt-3" data-aos="fade-in">
+          <div class="col-lg">
+            <h5>BSE Computer Science</h5>
+            <p>Planning to Minor in Statistics & Machine Learning and Quantitative & 
+              Computational Biology
+            </p>
+          </div>
+          <div class="col-md">
+            <h5>Relevant Coursework:</h5>
+            <ul>
+              <li>Data Structures and Algorithms</li>
+              <li>Intro to Computer Systems</li>
+              <li>Reasoning about Computation</li>
+              <li>Functional Programming</li>
+              <li>Probability and Stochastic Systems</li>
+              <li>Intro to Machine Learning (Spring 2021)</li>
+              <li>Algorithms for Computational Biology (Spring 2021)</li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <h5>Activities & Clubs: (more info 
+              <a href="#activities" class="a-custom-g">here</a>)
+            </h5>
+            <ul>
+              <li>Princeton University Orchestra</li>
+              <li>IvyHacks Virtual Hackathon</li>
+              <li>HackPrinceton</li>
+              <li>Club Rock Climbing Team</li>
+              <li>Outdoor Action</li>
+              <li>University Trumpet Ensemble</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <footer id="footer">
+    </footer>
   </body>
 </html>
