--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Devon Ulrich</title>
   </head>
-  <body>
+  <body data-spy="scroll" data-target="#myNav" data-offset="57" style="position: relative">
     <div id="headContainer" class="vh-100 d-flex flex-column align-items-center
       justify-content-center text-center">
       <h1 class="tw display-1 d-none d-md-inline">Devon Ulrich</h1>
@@ -21,23 +21,23 @@
 
     <nav class="navbar navbar-expand sticky-top navbar-light border-bottom
       justify-content-center bg-white">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">About</a>
+      <ul class="navbar-nav" id="myNav">
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Education</a>
+          <a class="nav-link" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Experience</a>
+          <a class="nav-link" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Activities</a>
+          <a class="nav-link" href="#activities">Activities</a>
         </li>
       </ul>
     </nav>
 
-    <div class="container my-5">
+    <div class="container py-5" id="about">
       <div class="row">
         <div class="col-md order-2" data-aos="fade-up">
           <h1 class="mb-3">Hello!</h1>
@@ -86,7 +86,7 @@
       </div>
     </div>
 
-    <div class="bg-light">
+    <div class="bg-light" id="education">
       <div class="container py-5">
         <h1 class="mb-3">Education</h1>
         <div class="row border-bottom">
@@ -102,7 +102,7 @@
         </div>
         <div class="row mt-3" data-aos="fade-in">
           <div class="col-lg">
-            <h5>BSE Computer Science</h5>
+            <h5>BSE in Computer Science</h5>
             <p>Planning to Minor in Statistics & Machine Learning and Quantitative & 
               Computational Biology
             </p>
@@ -134,6 +134,14 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class="container vh-100 py-5" id="experience">
+      <h1>Experience</h1>
+    </div>
+
+    <div class="bg-light vh-100 py-5" id="activities">
+
     </div>
 
     <footer id="footer">
