--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Devon Ulrich</title>
   </head>
-  <body data-spy="scroll" data-target="#myNav" data-offset="57" style="position: relative">
+  <body data-spy="scroll" style="position: relative" data-offset="">
     <div id="headContainer" class="vh-100 d-flex flex-column align-items-center
       justify-content-center text-center">
       <h1 class="tw display-1 d-none d-md-inline">Devon Ulrich</h1>
