--- a/src/index.html
+++ b/src/index.html
@@ -140,19 +140,19 @@
       <h1 class="mb-3">Experience</h1>
       <div class="row border-bottom">
         <div class="col-md">
-          <h4 data-aos="fade-right">Chessr</h4>
+          <h4>Chessr</h4>
         </div>
         <div class="col-md-6">
-          <h4 class="text-right d-none d-md-block" data-aos="fade-left">
+          <h4 class="text-right d-none d-md-block">
             July 2020 - Present
           </h4>
-          <h5 class="d-block d-md-none" data-aos="fade-right">
+          <h5 class="d-block d-md-none">
             July 2020 - Present
           </h5>
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-lg-9" data-aos="fade-in">
+        <div class="col-lg-9">
           <h5>Co-Lead Developer</h5>
           <ul>
             <li>Lead the development of a new chess website built with React,
@@ -168,19 +168,19 @@
 
       <div class="row border-bottom mt-4">
         <div class="col-md">
-          <h4 data-aos="fade-right">Princeton Environmental Institute</h4>
+          <h4>Princeton Environmental Institute</h4>
         </div>
         <div class="col-md-6">
-          <h4 class="text-right d-none d-md-block" data-aos="fade-left">
+          <h4 class="text-right d-none d-md-block">
             June 2020 - August 2020
           </h4>
-          <h5 class="d-block d-md-none" data-aos="fade-right">
+          <h5 class="d-block d-md-none">
             June 2020 - August 2020
           </h5>
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-lg" data-aos="fade-in">
+        <div class="col-lg">
           <h5>Machine Learning Intern</h5>
           <ul>
             <li>Created convolutional neural networks to segment large images
@@ -192,7 +192,7 @@
               reef, and presented results to the research lab and PEI</li>
           </ul>
         </div>
-        <div class="d-none d-lg-block col-lg-3" data-aos="fade-in">
+        <div class="d-none d-lg-block col-lg-3">
           <img alt="rock image" class="border img-fluid" />
         </div>
         <div class="col-12" data-aos="fade-in">
@@ -206,19 +206,19 @@
 
       <div class="row border-bottom mt-4">
         <div class="col-md">
-          <h4 data-aos="fade-right">NJ Governor's School in the Sciences</h4>
+          <h4>NJ Governor's School in the Sciences</h4>
         </div>
         <div class="col-md-6">
-          <h4 class="text-right d-none d-md-block" data-aos="fade-left">
+          <h4 class="text-right d-none d-md-block">
             July 2018
           </h4>
-          <h5 class="d-block d-md-none" data-aos="fade-right">
+          <h5 class="d-block d-md-none">
             July 2018
           </h5>
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-lg" data-aos="fade-in">
+        <div class="col-lg">
           <h5>Scholar & Researcher</h5>
           <ul>
             <li>Selected to be one of 60 scholars from a statewide applicant pool of 325
@@ -230,7 +230,7 @@
               results</li>
           </ul>
         </div>
-        <div class="d-none d-lg-block col-lg-3" data-aos="fade-in">
+        <div class="d-none d-lg-block col-lg-3">
           <img src=<%=require('./images/gss-chart.png').default%> class="img-fluid" />
         </div>
         <div class="col-12" data-aos="fade-in">
