Changed Activities format, and added hackathons to Experience
This new organization makes more sense & is a little cleaner
than before.

--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,42 @@
 
     <div class="container py-5" id="experience">
       <h1 class="mb-3">Experience</h1>
+
       <div class="row border-bottom">
+        <div class="col-md">
+          <h4>IvyHacks and HackPrinceton</h4>
+        </div>
+        <div class="col-md-6">
+          <h4 class="text-right d-none d-md-block">
+            August 2020 - Present
+          </h4>
+          <h5 class="d-block d-md-none">
+            August 2020 - Present
+          </h5>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-lg-9">
+          <h5>Web Developer</h5>
+          <ul>
+            <li>Help develop and maintain websites for two
+              large-scale virtual college hackathons</li>
+            <li>Implement modern sites with Bootstrap and React
+              for thousands of future attendees</li>
+          </ul>
+        </div>
+        <div class="col-12">
+          <a href="https://ivyhacks.com/">
+            <u>ivyhacks.com</u>
+          </a>
+          |
+          <a href="https://www.hackprinceton.com/" class="a-blue">
+            <u>hackprinceton.com</u>
+          </a>
+        </div>
+      </div>
+
+      <div class="row border-bottom mt-4">
         <div class="col-md">
           <h4>Chessr</h4>
         </div>
@@ -235,65 +270,75 @@
 
     <div class="bg-light py-5" id="activities">
       <div class="container">
-        <h1 class="mb-3">Activities & Projects</h1>
+        <h1 class="mb-3">Activities</h1>
+
         <div class="row border-bottom">
           <div class="col-md">
-            <h4>IvyHacks & HackPrinceton</h4>
-          </div>
-          <div class="col-md-6">
-            <h4 class="text-right d-none d-md-block">
-              August 2020 - Present
-            </h4>
-            <h5 class="d-block d-md-none">
-              August 2020 - Present
-            </h5>
+            <h4>Competitive Programming</h4>
           </div>
         </div>
         <div class="row mt-2">
           <div class="col">
-            <ul>
-              <li>Help develop and maintain websites for two large-scale virtual college
-                hackathons</li>
-              <li>Implement modern site with Bootstrap and React for thousands of event
-                applicants</li>
+            <ul class="mb-0">
+              <li>Achieved 154th place (Top 1%) in Google Kickstart Round E
+                <span class="float-right d-none d-md-inline">August 2020</span>
+                <span class="d-md-none">(August 2020)</span></li>
+              <li>Qualified for Google Code Jam Round 2 (Top 10%)
+                <span class="float-right d-none d-md-inline">April 2020</span>
+                <span class="d-md-none">(April 2020)</span></li>
+              <li>Advanced to USA Computing Olympiad's Platinum Division
+                <span class="float-right d-none d-md-inline">December 2016</span>
+                <span class="d-md-none">(December 2016)</span></li>
             </ul>
-          </div>
-          <div class="col-12">
-            <a href="https://ivyhacks.com/"><u>ivyhacks.com</u></a>
-            |
-            <a href="https://www.hackprinceton.com/" class="a-blue">
-              <u>hackprinceton.com</u>
-            </a>
           </div>
         </div>
 
-        <div class="row mt-4 border-bottom">
+        <div class="row border-bottom mt-4">
           <div class="col-md">
-            <h4>Princeton University Orchestra</h4>
-          </div>
-          <div class="col-md-6">
-            <h4 class="text-right d-none d-md-block">
-              September 2019 - Present
-            </h4>
-            <h5 class="d-block d-md-none">
-              September 2019 - Present
-            </h5>
+            <h4>Trumpet Performance</h4>
           </div>
         </div>
         <div class="row mt-2">
           <div class="col">
             <ul>
-              <li>Current trumpeter, webmaster, and committee member</li>
-              <li>Maintain current Orchestra website using cPanel and Wordpress</li>
-              <li>Work directly with Orchestra presidents and faculty to continuously
-                update site with new information</li>
+              <li>
+                <b>Princeton University Orchestra</b>: Member &amp; Webmaster
+                <span class="float-right d-none d-md-inline">September 2019 - Present</span>
+                <span class="d-md-none">(September 2019 - Present)</span>
+                <ul>
+                  <li>Rehearse weekly and perform in 4 concerts each year</li>
+                  <li>Maintain current Orchestra website with cPanel and Wordpress</li>
+                  <li>Work directly with Orchestra presidents and faculty to keep site updated
+                    with the latest information</li>
+                </ul>
+              </li>
+              <li>
+                <b>NAfME All-National Concert Band</b>: Trumpet 1
+                <span class="float-right d-none d-md-inline">November 2018</span>
+                <span class="d-md-none">(November 2018)</span>
+                <ul>
+                  <li>Auditioned and selected to perform with some of the best high school
+                    musicians across the country</li>
+                </ul>
+              </li>
+              <li>
+                <b>NJMEA All-State Wind Ensemble & Orchestra</b>: Trumpet 1
+                <span class="float-right d-none d-md-inline">February 2016 - February 2019</span>
+                <span class="d-md-none">(February 2016 - February 2019)</span>
+                <ul>
+                  <li>Auditioned for these state-wide ensembles alongside 100+ other high school
+                    trumpet players annually</li>
+                  <li>Consistently selected as one of the top 5 trumpet players; ranked 1st overall
+                    in 2019</li>
+                  <li>Performed with other outstanding musicians across the state in 3 All-State 
+                    concerts each year</li>
+              </li>
             </ul>
           </div>
           <div class="col-12">
             <a href="https://orchestra.princeton.edu/"><u>orchestra.princeton.edu</u></a>
           </div>
         </div>
-
       </div>
     </div>
 
