Added some finishing touches
Got rid of rock image for now, to be added back in later.

--- a/src/index.html
+++ b/src/index.html
@@ -146,8 +146,8 @@
           <ul>
             <li>Help develop and maintain websites for two
               large-scale virtual college hackathons</li>
-            <li>Implement modern sites with Bootstrap and React
-              for thousands of future attendees</li>
+            <li>Implement modern sites, which areused by thousands 
+              of future attendees, with Bootstrap and React</li>
           </ul>
         </div>
         <div class="col-12">
@@ -158,34 +158,6 @@
           <a href="https://www.hackprinceton.com/" class="a-blue">
             <u>hackprinceton.com</u>
           </a>
-        </div>
-      </div>
-
-      <div class="row border-bottom mt-4">
-        <div class="col-md">
-          <h4>Chessr</h4>
-        </div>
-        <div class="col-md-6">
-          <h4 class="text-right d-none d-md-block">
-            July 2020 - Present
-          </h4>
-          <h5 class="d-block d-md-none">
-            July 2020 - Present
-          </h5>
-        </div>
-      </div>
-      <div class="row mt-2">
-        <div class="col-lg-9">
-          <h5>Co-Lead Developer</h5>
-          <ul>
-            <li>Lead the development of a new chess website built with React,
-              Bootstrap, and Django</li>
-            <li>Organize and assign front-end tasks to each developer, and manage the
-              site's private GitHub repository</li>
-          </ul>
-        </div>
-        <div class="col-12">
-          <span style="color: #00bb66">Website Coming Soon!</span>
         </div>
       </div>
 
@@ -203,7 +175,7 @@
         </div>
       </div>
       <div class="row mt-2">
-        <div class="col-lg">
+        <div class="col-lg-9">
           <h5>Machine Learning Intern</h5>
           <ul>
             <li>Created convolutional neural networks to segment large images
@@ -215,15 +187,43 @@
               reef, and presented results to the research lab and PEI</li>
           </ul>
         </div>
-        <div class="d-none d-lg-block col-lg-3">
+        <!--div class="d-none d-lg-block col-lg-3">
           <img alt="rock image" class="border img-fluid" />
-        </div>
+        </div-->
         <div class="col-12">
           <a href="https://github.com/boltonhowes22/U_net_transfer_learning">
             <u>GitHub Repo</u>
           </a>
           |
           <span style="color: #0066bb">Presentation Coming Soon!</span>
+        </div>
+      </div>
+
+      <div class="row border-bottom mt-4">
+        <div class="col-md">
+          <h4>Chessr</h4>
+        </div>
+        <div class="col-md-6">
+          <h4 class="text-right d-none d-md-block">
+            June 2020 - Present
+          </h4>
+          <h5 class="d-block d-md-none">
+            June 2020 - Present
+          </h5>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-lg-9">
+          <h5>Co-Lead Developer</h5>
+          <ul>
+            <li>Lead the development of a new chess website built with React,
+              Bootstrap, and Django</li>
+            <li>Organize and assign front-end tasks to each developer, and manage the
+              site's private GitHub repository</li>
+          </ul>
+        </div>
+        <div class="col-12">
+          <span style="color: #00bb66">Website Coming Soon!</span>
         </div>
       </div>
 
@@ -342,7 +342,14 @@
       </div>
     </div>
 
-    <footer id="footer">
+    <footer id="footer" class="text-white">
+      <p class="text-center">
+        Website made by Devon Ulrich
+        <br>
+        <a href="https://github.com/devonulrich/devonulrich.github.io">
+          <u>View Source on GitHub</u>
+        </a>
+      </p>
     </footer>
   </body>
 </html>
