Changed underlined skills to bold

--- a/src/index.html
+++ b/src/index.html
@@ -54,12 +54,12 @@
           </p>
           <h4>Here are some of my skills</h4>
           <ul>
-            <li><u>Programming Languages</u>: Java, C/C++, MATLAB, Python, Javascript,
+            <li><b>Programming Languages</b>: Java, C/C++, MATLAB, Python, Javascript,
               OCaml</li>
-            <li><u>Web Tools &amp; Frameworks</u>: HTML/CSS, React, Bootstrap, Webpack</li>
-            <li><u>SWE Environments &amp; Tools</u>: Linux, Git/GitHub, Bash</li>
-            <li><u>Other Software</u>: Photoshop</li>
-            <li><u>Foreign Languages</u>: Spanish (NJ Department of Education's
+            <li><b>Web Tools &amp; Frameworks</b>: HTML/CSS, React, Bootstrap, Webpack</li>
+            <li><b>SWE Environments &amp; Tools</b>: Linux, Git/GitHub, Bash</li>
+            <li><b>Other Software</b>: Photoshop</li>
+            <li><b>Foreign Languages</b>: Spanish (NJ Department of Education's
               Certificate of Biliteracy)</li>
           </ul>
         </div>
