Added Lab TA info

--- a/src/index.html
+++ b/src/index.html
@@ -129,6 +129,31 @@
 
       <div class="row border-bottom">
         <div class="col-md">
+          <h4>Princeton Department of Computer Science</h4>
+        </div>
+        <div class="col-md-6">
+          <h4 class="text-right d-none d-md-block">
+            September 2020 - Present
+          </h4>
+          <h5 class="d-block d-md-none">
+            September 2020 - Present
+          </h5>
+        </div>
+      </div>
+      <div class="row mt-2">
+        <div class="col-lg-9">
+          <h5>Lab Teaching Assistant</h5>
+          <ul>
+            <li>Invited to become a TA after excelling in Algorithms and
+              Computer Systems courses</li>
+            <li>Teach students how to debug programming assignments in Java and
+              C during weekly meetings</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="row border-bottom mt-4">
+        <div class="col-md">
           <h4>IvyHacks and HackPrinceton</h4>
         </div>
         <div class="col-md-6">
