Minor layout & description updates

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#activities">Activities</a>
+          <a class="nav-link" href="#projects">Projects</a>
         </li>
       </ul>
     </nav>
@@ -31,7 +31,7 @@
             <img src=<%=require('./images/me.jpg').default%>
               class="rounded-circle img-thumbnail mx-auto" />
             <div class="mt-3 d-none d-md-block text-center">
-              <a href="https://www.linkedin.com/in/devon-ulrich-a57b2b1b4/"
+              <a href="https://www.linkedin.com/in/devonulrich/"
                 class="noul mr-1">
                 <img src=<%=require('./images/linkedin-brands.svg').default%>
                   class="icon" />
@@ -52,12 +52,13 @@
             solve all sorts of problems in technology and the natural sciences, and
             I also love developing software that brings new innovations to a wide audience.
           </p>
-          <h4>Here are some of my skills</h4>
+          <h4>My Skills:</h4>
           <ul>
             <li><b>Programming Languages</b>: Java, C/C++, MATLAB, Python, Javascript,
               OCaml</li>
-            <li><b>Web Tools &amp; Frameworks</b>: HTML/CSS, React, Bootstrap, Webpack</li>
-            <li><b>SWE Environments &amp; Tools</b>: Linux, Git/GitHub, Bash</li>
+            <li><b>Web Tools &amp; Frameworks</b>: HTML/CSS, React, Bootstrap, Webpack,
+              Express</li>
+            <li><b>SWE Environments &amp; Tools</b>: Linux, Android, Git/GitHub, Bash</li>
             <li><b>Other Software</b>: Photoshop</li>
             <li><b>Foreign Languages</b>: Spanish (NJ Department of Education's
               Certificate of Biliteracy)</li>
@@ -66,7 +67,7 @@
       </div>
       <div class="row d-md-none">
         <div class="col text-center">
-          <a href="https://www.linkedin.com/in/devon-ulrich-a57b2b1b4/" role="button" 
+          <a href="https://www.linkedin.com/in/devonulrich/" role="button" 
             class="btn btn-custom-b">LinkedIn</a>
           <a href="https://github.com/devonulrich" role="button"
             class="btn btn-custom-g">GitHub</a>
@@ -142,47 +143,13 @@
       </div>
       <div class="row mt-2">
         <div class="col-lg-9">
-          <h5>Lab Teaching Assistant</h5>
+          <h5>Undergraduate Teaching Assistant</h5>
           <ul>
             <li>Invited to become a TA after excelling in Algorithms and
               Computer Systems courses</li>
             <li>Teach students how to debug programming assignments in Java and
               C during weekly meetings</li>
           </ul>
-        </div>
-      </div>
-
-      <div class="row border-bottom mt-4">
-        <div class="col-md">
-          <h4>IvyHacks and HackPrinceton</h4>
-        </div>
-        <div class="col-md-6">
-          <h4 class="text-right d-none d-md-block">
-            August 2020 - Present
-          </h4>
-          <h5 class="d-block d-md-none">
-            August 2020 - Present
-          </h5>
-        </div>
-      </div>
-      <div class="row mt-2">
-        <div class="col-lg-9">
-          <h5>Web Developer</h5>
-          <ul>
-            <li>Help develop and maintain websites for two
-              large-scale virtual college hackathons</li>
-            <li>Implement modern sites, which areused by thousands 
-              of future attendees, with Bootstrap and React</li>
-          </ul>
-        </div>
-        <div class="col-12">
-          <a href="https://ivyhacks.com/">
-            <u>ivyhacks.com</u>
-          </a>
-          |
-          <a href="https://www.hackprinceton.com/" class="a-blue">
-            <u>hackprinceton.com</u>
-          </a>
         </div>
       </div>
 
@@ -201,13 +168,14 @@
       </div>
       <div class="row mt-2">
         <div class="col-lg-9">
-          <h5>Machine Learning Intern</h5>
+          <h5>Software Engineering & ML Intern</h5>
           <ul>
-            <li>Created convolutional neural networks to segment large images
-              of fossilized rock with an 85% accuracy</li>
+            <li>Created convolutional neural networks with Python and TensorFlow to
+              segment large images of fossilized rock with an 85% accuracy</li>
             <li>Improved machine learning training speed by 10x by transferring codebase
               to a remote Linux cluster</li>
-            <li>Maintained the research lab's MATLAB code in a GitHub repository</li>
+            <li>Maintained the research lab's MATLAB and Python code in a GitHub
+              repository</li>
             <li>Analyzed the abundance of shells in different sections of an ancient oceanic
               reef, and presented results to the research lab and PEI</li>
           </ul>
@@ -219,36 +187,6 @@
           <a href="https://github.com/boltonhowes22/U_net_transfer_learning">
             <u>GitHub Repo</u>
           </a>
-          |
-          <span style="color: #0066bb">Presentation Coming Soon!</span>
-        </div>
-      </div>
-
-      <div class="row border-bottom mt-4">
-        <div class="col-md">
-          <h4>Chessr</h4>
-        </div>
-        <div class="col-md-6">
-          <h4 class="text-right d-none d-md-block">
-            June 2020 - Present
-          </h4>
-          <h5 class="d-block d-md-none">
-            June 2020 - Present
-          </h5>
-        </div>
-      </div>
-      <div class="row mt-2">
-        <div class="col-lg-9">
-          <h5>Co-Lead Developer</h5>
-          <ul>
-            <li>Lead the development of a new chess website built with React,
-              Bootstrap, and Django</li>
-            <li>Organize and assign front-end tasks to each developer, and manage the
-              site's private GitHub repository</li>
-          </ul>
-        </div>
-        <div class="col-12">
-          <span style="color: #00bb66">Website Coming Soon!</span>
         </div>
       </div>
 
@@ -267,15 +205,12 @@
       </div>
       <div class="row mt-2">
         <div class="col-lg">
-          <h5>Scholar & Researcher</h5>
+          <h5>Student Researcher</h5>
           <ul>
-            <li>Selected to be one of 60 scholars from a statewide applicant pool of 325
-              STEM students</li>
-            <li>Completed a machine learning research project with other scholars, which
-              used an SVM to predict NFL team outcomes with a similar accuracy to
-              professional analysts</li>
-            <li>Co-authored a research paper and presentation on our process and
-              results</li>
+            <li>Used Python and scikit-learn to develop new machine learning techniques 
+              for analyzing sports data</li>
+            <li>Co-authored a research paper and presentation on predicting NFL Football 
+              Game results with ML</li>
           </ul>
         </div>
         <div class="d-none d-lg-block col-lg-3">
@@ -293,75 +228,39 @@
       </div>
     </div>
 
-    <div class="bg-light py-5" id="activities">
+    <div class="bg-light py-5" id="projects">
       <div class="container">
-        <h1 class="mb-3">Activities</h1>
+        <h1 class="mb-3">Projects</h1>
 
         <div class="row border-bottom">
           <div class="col-md">
-            <h4>Competitive Programming</h4>
+            <h4>HackPrinceton</h4>
           </div>
         </div>
         <div class="row mt-2">
           <div class="col">
             <ul class="mb-0">
-              <li>Achieved 154th place (Top 1%) in Google Kickstart Round E
-                <span class="float-right d-none d-md-inline">August 2020</span>
-                <span class="d-md-none">(August 2020)</span></li>
-              <li>Qualified for Google Code Jam Round 2 (Top 10%)
-                <span class="float-right d-none d-md-inline">April 2020</span>
-                <span class="d-md-none">(April 2020)</span></li>
-              <li>Advanced to USA Computing Olympiad's Platinum Division
-                <span class="float-right d-none d-md-inline">December 2016</span>
-                <span class="d-md-none">(December 2016)</span></li>
+              <li>Help develop and maintain <a href="https://ivyhacks.com/">
+                https://ivyhacks.com/</a> with HTML/CSS/JS, React, and Bootstrap</li>
+              <li>Plan future events and hackathons during monthy meetings with other
+                leaders</li>
             </ul>
           </div>
         </div>
 
         <div class="row border-bottom mt-4">
           <div class="col-md">
-            <h4>Trumpet Performance</h4>
+            <h4>Princeton University Orchestra</h4>
           </div>
         </div>
         <div class="row mt-2">
           <div class="col">
-            <ul>
-              <li>
-                <b>Princeton University Orchestra</b>: Member &amp; Webmaster
-                <span class="float-right d-none d-md-inline">September 2019 - Present</span>
-                <span class="d-md-none">(September 2019 - Present)</span>
-                <ul>
-                  <li>Rehearse weekly and perform in 4 concerts each year</li>
-                  <li>Maintain current Orchestra website with cPanel and Wordpress</li>
-                  <li>Work directly with Orchestra presidents and faculty to keep site updated
-                    with the latest information</li>
-                </ul>
-              </li>
-              <li>
-                <b>NAfME All-National Concert Band</b>: Trumpet 1
-                <span class="float-right d-none d-md-inline">November 2018</span>
-                <span class="d-md-none">(November 2018)</span>
-                <ul>
-                  <li>Auditioned and selected to perform with some of the best high school
-                    musicians across the country</li>
-                </ul>
-              </li>
-              <li>
-                <b>NJMEA All-State Wind Ensemble & Orchestra</b>: Trumpet 1
-                <span class="float-right d-none d-md-inline">February 2016 - February 2019</span>
-                <span class="d-md-none">(February 2016 - February 2019)</span>
-                <ul>
-                  <li>Auditioned for these state-wide ensembles alongside 100+ other high school
-                    trumpet players annually</li>
-                  <li>Consistently selected as one of the top 5 trumpet players; ranked 1st overall
-                    in 2019</li>
-                  <li>Performed with other outstanding musicians across the state in 3 All-State 
-                    concerts each year</li>
-              </li>
+            <ul class="mb-0">
+              <li>Design and maintain <a href="https://orchestra.princeton.edu/"
+                class="a-blue">https://orchestra.princeton.edu/</a> with HTML/CSS,
+                WordPress, and cPanel</li>
+              <li>Rehearse weekly and perform in four concerts each year</li>
             </ul>
-          </div>
-          <div class="col-12">
-            <a href="https://orchestra.princeton.edu/"><u>orchestra.princeton.edu</u></a>
           </div>
         </div>
       </div>
@@ -371,7 +270,7 @@
       <p class="text-center">
         Website made by Devon Ulrich
         <br>
-        <a href="https://github.com/devonulrich/devonulrich.github.io">
+        <a href="https://github.com/devonulrich/portfolio">
           <u>View Source on GitHub</u>
         </a>
       </p>
