Changed webpack config & updated school year info
Webpack will no longer clean the dist/ folder when building,
so the git repository will stay intact and can be updated and
pushed to immediately update the site.

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         <div class="col-md">
           <h1 class="mb-3">Hello!</h1>
           <p class="text-justify mt-3">I'm Devon Ulrich, a current
-            sophomore at Princeton. I'm majoring in CS, and am planning on minoring
+            student at Princeton. I'm majoring in CS, and am planning on minoring
             in Statistics &amp; Machine Learning and Quantitative &amp; Computational
             Biology. I'm really interested in applying machine learning techniques to
             solve all sorts of problems in technology and the natural sciences, and
@@ -84,10 +84,6 @@
               Princeton University
             </h3>
           </div>
-          <div class="col-sm-4">
-            <h3 class="text-right d-none d-sm-block">May 2023</h3>
-            <h4 class="d-block d-sm-none">May 2023</h4>
-          </div>
         </div>
         <div class="row mt-3">
           <div class="col-lg">
@@ -104,8 +100,8 @@
               <li>Reasoning about Computation</li>
               <li>Functional Programming</li>
               <li>Probability and Stochastic Systems</li>
-              <li>Intro to Machine Learning (Spring 2021)</li>
-              <li>Algorithms for Computational Biology (Spring 2021)</li>
+              <li>Intro to Machine Learning</li>
+              <li>Algorithms for Computational Biology</li>
             </ul>
           </div>
           <div class="col-md">
